# ifmt

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  exp.rs
demo/: Cargo.toml
demo/src/: main.rs
examples/: demo.rs
impl/: Cargo.toml
impl/src/: lib.rs
src/: lib.rs
tests/: inlittests.rs  outlittests.rs  tests.rs
