[package]
name = "ifmt-impl"
version = "0.1.2"
authors = ["ct-austin <c@ctaustin.me>"]
edition = "2018"
repository = "https://github.com/ct-austin/ifmt"
description = "Implementation detail of the ifmt crate."
license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = "0.15"
regex = "1.1"
lazy_static = "1.3"
proc-macro2 = "0.4"
quote = "0.6"
proc-macro-hack = "0.5"
